--- a/static/slideshow/index.html
+++ b/static/slideshow/index.html
@@ -31,7 +31,7 @@
 
                 if (iframes.length > 0) {
                     iframes[0].classList.add('visible');
-                    const interval = (params.get('interval') || 30) * 1000;
+                    const interval = (params.get('seconds') || 30) * 1000;
                     setInterval(showNextIframe(iframes), interval);
                 } else {
                     document
